Fix layout for layer entries with whitespace

--- a/src/app/components/resources/map/map/layers/layer-menu.scss
+++ b/src/app/components/resources/map/map/layers/layer-menu.scss
@@ -135,4 +135,5 @@ div.cdk-drag-preview {
   position: relative;
   bottom: 2px;
   font-size: 14px;
+  white-space: nowrap;
 }
